[home] wrap nav links to prevent overflow

--- a/ext/home/style.css
+++ b/ext/home/style.css
@@ -1,7 +1,7 @@
 div#front-page h1 {font-size: 4rem; margin-top: 2em; margin-bottom: 0; text-align: center; border: none; background: none; box-shadow: none; -webkit-box-shadow: none; -moz-box-shadow: none;}
 div#front-page {text-align:center;}
 div#front-page .space {margin-bottom: 1em;}
-div#front-page div#links a {margin: 0 0.5em;}
+div#front-page div#links a {display: inline-block; margin: 0 0.5em;}
 div#front-page li {list-style-type: none; margin: 0;}
 @media (max-width: 800px) {
 	div#front-page h1 {font-size: 3rem; margin-top: 0.5em; margin-bottom: 0.5em;}
